--- a/54.html
+++ b/54.html
@@ -382,7 +382,7 @@
                     <p class="o_mb" style="margin-top: 0px;margin-bottom: 16px;">Heartbreak in the final round of a gruelling best of three means we won't be seeing everyone's favourite juggernaut at the Minor. They were dumped out by SMASH, a mix team of languages, cultures and nationalities - which finally proves that chaos is better than cohesion, as SMASH did what Astralis couldn't.</p>
                          <p class="o_mb" style="margin-top: 0px;margin-bottom: 16px;">Complexity went from smashing ZywOo and Astralis 2-0 to losing to SMASH in the Minor Qualifiers. Yes, it was online instead of LAN, <i>but we all know online is where the real stars come to play.</i></p>
 					  
-                    <p class="o_mb-lg" style="margin-top: 0px;margin-bottom: 32px;">SMASH joined Copenhagen Flames in the Closed Qualifier after they dumped out Polish side Illuminar. Minor Qualifiers are basically AcilioN's second home at this point, and he helped an inexperienced Danish side through to the next round of qualifying.</p>
+                    <p class="o_mb" style="margin-top: 0px;margin-bottom: 32px;">SMASH joined Copenhagen Flames in the Closed Qualifier after they dumped out Polish side Illuminar. Minor Qualifiers are basically AcilioN's second home at this point, and he helped an inexperienced Danish side through to the next round of qualifying.</p>
                   </td>
                 </tr>
               
