--- a/matches_56.html
+++ b/matches_56.html
@@ -103,7 +103,7 @@
                   </th>
                 </tr>
                 <tr style="vertical-align: top;">
-                  <td colspan="2" width="592" class="o_col o_pl-xl o_pr-xl o_pt-md o_pb o_sans o_text o_text-dark o_bb-primary" align="left" data-color="Dark" data-border-color="Border Primary" style="font-family: Helvetica Neue, Helvetica, Arial, sans-serif;font-weight: normal;font-size: 16px;line-height: 21px;color: #000000;border-bottom: 2px solid #FFCC00;padding-top: 24px;padding-bottom: 16px;padding-left: 104px;padding-right: 104px;">
+                  <td colspan="2" width="592" class="o_col o_pl-xl o_pr-xl o_pt-md o_pb o_sans o_text o_text-dark o_bb-primary" align="left" data-color="Dark" data-border-color="Border Primary" style="font-family: Helvetica Neue, Helvetica, Arial, sans-serif;font-weight: normal;font-size: 16px;line-height: 21px;color: #000000;padding-top: 24px;padding-bottom: 16px;padding-left: 104px;padding-right: 104px;">
                     <ul class="o_mb-md" style="padding-left: 24px;margin-bottom: 24px;">
                       <li class="o_mb" style="margin-top: 0px;margin-bottom: 16px;">No you're not reading it wrong. This is DreamHack Open with MIBR, Complexity, ENCE and North. We're hyped. And so are they, because there are ESL Pro Tour points at stake, and they all need them.&nbsp;</li>
                       <li class="o_mb" style="margin-top: 0px;margin-bottom: 16px;">We hope that BnTeT has been working out lately, because he's most likely going to carry four guys on his back if Gen.G is to progress from a group with ENCE, Complexity and MIBR.</li>
