--- a/matches_57.html
+++ b/matches_57.html
@@ -142,7 +142,7 @@
                   </th>
                 </tr>
                 <tr style="vertical-align: top;">
-                  <td colspan="2" width="592" class="o_col o_pl-xl o_pr-xl o_pt-md o_pb o_sans o_text o_text-dark o_bb-primary" align="left" data-color="Dark" data-border-color="Border Primary" style="font-family: Helvetica Neue, Helvetica, Arial, sans-serif;font-weight: normal;font-size: 16px;line-height: 21px;color: #000000;border-bottom: 2px solid #FFCC00;padding-top: 24px;padding-bottom: 16px;padding-left: 104px;padding-right: 104px;">
+                  <td colspan="2" width="592" class="o_col o_pl-xl o_pr-xl o_pt-md o_pb o_sans o_text o_text-dark o_bb-primary" align="left" data-color="Dark" data-border-color="Border Primary" style="font-family: Helvetica Neue, Helvetica, Arial, sans-serif;font-weight: normal;font-size: 16px;line-height: 21px;color: #000000;padding-top: 24px;padding-bottom: 16px;padding-left: 104px;padding-right: 104px;">
                     <ul class="o_mb-md" style="padding-left: 24px;margin-bottom: 24px;">
                       <li class="o_mb" style="margin-top: 0px;margin-bottom: 16px;"><b>Madness in Brazil</b>: Imagine sinking $2M+ into a CS:GO team and not being able to breach the Top 10. No, we're not talking about North, but Made in Brazil, who crashed out of a DreamHack Open groupstage. Oh what a fall from grace. FURIA is the captain now. Que ota?</li>
                       <li class="o_mb" style="margin-top: 0px;margin-bottom: 16px;"><b>Katowice </b>😍: It's that time of the year again where gamers flock to the Spodek Arena for their shot at fame and fortune, and it all starts today. NiP vs Vitality and NaVi vs FaZe are the headliners, but who do you think will take the title?</li>
