--- a/matches_72.html
+++ b/matches_72.html
@@ -137,10 +137,10 @@
                       <li class="o_mb" style="margin-top: 0px;margin-bottom: 16px;"><b>HAVU secures $100,000:</b> Since HAVU was founded in May 2017, the Finnish organization has won approximately $330,000 in total. With a guaranteed third place in Flashpoint they can add at least $100,000 to that tally, and more than double it if they win the whole thing. <i>Not bad for a team that got in through the open qualifier.</i></li>
                       <li class="o_mb" style="margin-top: 0px;margin-bottom: 16px;"><b>MIBR is the best of the rest:</b> CS:GO in 2020 has been weird, to say the least and realizing that either MIBR, HAVU or MAD Lions will win one of the biggest 1st place prizes of the year doesn't help with that. MIBR took both HAVU and MAD Lions down 2-1 on their way to the Grand Final and might end up with a $500,000 pay-day. <i>This is still not a joke.</i></li>
 					      </ul>
-				     <p class="o_mb-lg" style="margin-top: 0px;margin-bottom: 16px;"><b>
+				     <p class="o_mb" style="margin-top: 0px;margin-bottom: 16px;"><b>
                      Public service announcement from the TLDR team:</b> Before we get further into the newsletter, we have one thing we'd like to get off of our chest. We recently ran a survey among select readers, and you all agreed on one thing: Thorin takes up way too much of our writing. 
                     </p>
-					 <p class="o_mb-lg" style="margin-top: 0px;margin-bottom: 32px;">
+					 <p class="o_mb" style="margin-top: 0px;margin-bottom: 32px;">
                       Sometimes you need an intervention from your friends, and this was that for us. We've decided to evict him; <i>no more living in our heads without paying rent</i>. From now on we will use Thorin's tweets to forward a point in a story, not making them the story itself. <i>Thanks guys, we really needed that and don't ever hesitate to hit reply and share your feedback.
 					   </i></p></td>
                 </tr>
