--- a/matches_188.html
+++ b/matches_188.html
@@ -4,22 +4,7 @@
           <td class="o_bg-primary" align="center" data-bgcolor="Bg Primary" style="background-color: #FFCC00;">
             <table class="o_block o_bg-white" cellspacing="0" cellpadding="0" border="0" role="presentation" data-bgcolor="Bg White" style="width: 800px;margin: 0 auto;background-color: #ffffff;">
 
-                <tbody><tr style="vertical-align: top;">
-                  <td colspan="2" width="592" class="o_col o_pl-xl o_pr-xl o_pt" align="left" style="padding-top: 16px;padding-left: 104px;padding-right: 104px;">
-                    <table cellspacing="0" cellpadding="0" border="0" role="presentation">
-
-                        <tbody><tr style="vertical-align: top;">
-                          <td class="o_bg-dark o_br o_py-xs o_px-xs o_text-white" align="left" data-bgcolor="Bg Dark" data-color="White" style="background-color: #000000;color: #ffffff;border-radius: 4px;padding-left: 8px;padding-right: 8px;padding-top: 8px;padding-bottom: 8px;">
-                            <p class="o_curier o_caps" style="margin-top: 0px;margin-bottom: 0px;font-family: Courier New, Courier, Lucida Sans Typewriter, Lucida Typewriter, monospace;font-weight: bold;text-transform: uppercase;font-size: 10px;line-height: 10px;letter-spacing: 1px;">Match highlights</p>
-                          </td>
-                        </tr>
-                        <tr style="vertical-align: top;">
-                          <td style="font-size: 8px; line-height: 8px; height: 8px;">&nbsp; </td>
-                        </tr>
-
-                    </tbody></table>
-                  </td>
-                </tr>
+                <tbody>
                 <tr style="vertical-align: top;">
                   <th width="280" class="o_col o_pl-xl o_pr o_br-grey o_xs-br-0" align="left" data-border-color="Border Grey" style="border-right: 2px solid #E9E9E9;padding-left: 104px;padding-right: 16px;">
                     <table width="100%" cellspacing="0" cellpadding="0" border="0" role="presentation">
@@ -96,7 +81,7 @@
                           <th class="o_py-xs o_bb-grey o_bold o_sans o_text-xxs" align="right" data-border-color="Border Grey" style="font-family: Helvetica Neue, Helvetica, Arial, sans-serif;font-weight: bold;font-size: 12px;line-height: 22px;border-bottom: 2px solid #E9E9E9;padding-top: 8px;padding-bottom: 8px;">
                             Na`Vi&nbsp;<img src="https://ac-image.s3.amazonaws.com/9/1/2/3/4/0/home/admin/team_logos/navi.png" width="20" height="20" alt="" style="max-width: 20px;-ms-interpolation-mode: bicubic;vertical-align: middle;border: 0;line-height: 100%;height: auto;outline: none;text-decoration: none;">
                           </th>
-                         <th width="54" class="o_py-xs o_px-xs o_bb-grey" align="center" data-border-color="Border Grey" style="border-bottom: 2px solid #E9E9E9;padding-left: 8px;padding-right: 8px;padding-top: 8px;padding-bottom: 8px;">
+                         <th width="75" class="o_py-xs o_px-xs o_bb-grey" align="center" data-border-color="Border Grey" style="border-bottom: 2px solid #E9E9E9;padding-left: 8px;padding-right: 8px;padding-top: 8px;padding-bottom: 8px;">
                             <table width="100%" cellspacing="0" cellpadding="0" border="0" role="presentation">
 
                                 <tbody><tr style="vertical-align: top;">
@@ -115,7 +100,7 @@
                   </th>
                 </tr>
                 <tr style="vertical-align: top;">
-                  <td colspan="2" width="592" class="o_col o_pl-xl o_pr-xl o_pt-md o_pb o_sans o_text o_text-dark o_bb-primary" align="left" data-color="Dark" data-border-color="Border Primary" style="font-family: Helvetica Neue, Helvetica, Arial, sans-serif;font-weight: normal;font-size: 16px;line-height: 21px;color: #000000;border-bottom: 2px solid #FFCC00;padding-top: 24px;padding-bottom: 16px;padding-left: 104px;padding-right: 104px;">
+                  <td colspan="2" width="592" class="o_col o_pl-xl o_pr-xl o_pt-md o_pb o_sans o_text o_text-dark o_bb-primary" align="left" data-color="Dark" data-border-color="Border Primary" style="font-family: Helvetica Neue, Helvetica, Arial, sans-serif;font-weight: normal;font-size: 16px;line-height: 21px;color: #000000;border-bottom: 0px solid #FFCC00;padding-top: 24px;padding-bottom: 16px;padding-left: 104px;padding-right: 104px;">
                    <ul class="o_mb-md" style="padding-left: 24px;margin-bottom: 24px;" spellcheck="false">
                       <li class="o_mb" style="margin-top: 0px;margin-bottom: 16px;"><b>What more can I do?:</b> NaVi lost to Gambit, and lost on Dust 2. It happens. What shouldn't happen is s1mple going 9-0 in opening duels, 30 bombing in regulation and earning a 1.60 rating and losing in 29 rounds. Eesh.</li>
                       <li class="o_mb" style="margin-top: 0px;margin-bottom: 16px;"><b>Speaking of which...:</b> Poor saffee. He picked up 94 kills in a BO3, including 55 kills on the deciding map, and still lost to a team called Party Astronauts. That puts the paiN in paiN Gaming.</li>
